updated script source
added event listener to the script source

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
     <title>Document</title>
 </head>
 <body>
@@ -32,6 +34,7 @@
             <button data-action="decimal">.</button>
             <button data-action="clear">AC</button>
             <button class="key--equal" data-action="calculate">=</button>
+            
           </div>
         </div>
       </div>
