added new buttons to calculator

--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
             <button>2</button>
             <button>3</button>
             <button>0</button>
+            <button class="square" data-action="square">²</button>
+            <button class="sqroot" >√</button>
+            <button >←</button>
             <button data-action="decimal">.</button>
             <button data-action="clear">AC</button>
             <button class="key--equal" data-action="calculate">=</button>
