--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
             <button>3</button>
             <button>0</button>
             <button class="square" data-action="square">²</button>
-            <button class="sqroot" >√</button>
-            <button >←</button>
+            <button class="sqroot" data-action="b-space">√</button>
+            <button class="b-space" data-action="b-space">←</button>
             <button data-action="decimal">.</button>
             <button data-action="clear">AC</button>
             <button class="key--equal" data-action="calculate">=</button>
