corrected data-action for square root button

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <button>4</button>
             <button>5</button>
             <button>6</button>
-            <button class="key--equal" data-action="b-space">√</button>
+            <button class="key--equal" data-action="sq-root">√</button>
             <button>1</button>
             <button>2</button>
             <button>3</button>
